<resources>
    <string name="app_name">schoolie</string>
    <string name="attendance_text">Attendance will be displayed here</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="dateTextView">dateTextView</string>
    <string name="statusTextView">statusTextView</string>
    <string name="AttendanceRecords">AttendanceRecords</string>
    <string name="post_notification">Post Notification</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="manage_profile">Manage Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="delete_account">Delete Account</string>
    <string-array name="attendance_status_options">
        <item>All</item>
        <item>Present</item>
        <item>Absent</item>
        <item>Tardy</item>
    </string-array>
</resources>