<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="48dp">

    <TextView
        android:id="@+id/attendanceTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/attendance_text"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dateTextView"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/statusTextView"
        tools:ignore="HardcodedText" />

    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:padding="8dp" />

    <Button
        android:id="@+id/sortButton"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:text="@string/sort_by_date" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/attendanceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:clipToPadding="false" />

</LinearLayout>